--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,36 @@
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 800;
+    src: url('../fonts/poppins-v21-latin-800.woff2') format('woff2');
+}
+
 :root {
 --color-brand-dark: #465929;
 --color-brand-light: #819B57;
@@ -7,7 +40,15 @@
 /* Base */
 body {
 color: var(--primary-dark);
+font-family: 'Poppins', sans-serif;
+font-size: 18px;
+font-weight: 400;
+line-height: 1.5;
 }
+
+address {
+font-style: normal;
+    }
 ul {
 list-style-type: none;
     }
@@ -19,6 +60,7 @@ list-style-type: none;
     border: 2px solid var(--color-brand-light);
     border-radius: 8px; 
     cursor: pointer;
+    font-weight: 600;
 }
 .button:hover {
 color: var(--color-brand-light);
@@ -26,18 +68,28 @@ background-color: transparent;
 }
 
 .link {
-color: var(--primary-light)
+color: var(--primary-light);
+text-decoration: none;
 }
+
 .link:hover {
-color: var(--color-brand-dark)
+color: var(--color-brand-dark);
+font-weight: 600;
+text-decoration: none;
 }
 
 /* Hero Section */
 .hero-title {
-color: var(--primary-light)}
+color: var(--primary-light);
+text-align: center;
+font-size: 148px;
+font-weight: 900;
+
+}
 
 .hero-title .accent {
-   color: var(--color-brand-light)}
+   color: var(--color-brand-light);
+}
 
 /* Advantages Section */
    .advantages-list {
@@ -45,9 +97,60 @@ color: var(--primary-light)}
     background: var(--color-brand-light);
    }
 
+   .advantages-item {
+       font-size: 20px;
+       font-weight: 300;
+    }
    .section-title {
     color: var(--primary-dark);
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
     }
     .section-title .accent {
     color: var(--color-brand-dark);
         }
+
+    /* Traditions Section */
+    .traditions-text .brand {
+        color: var(--color-brand-light);
+   font-weight: 600;
+       }
+    
+.traditions-text .brand-uppercase {
+        text-transform: uppercase;
+        color: var(--color-brand-light);
+        font-weight: 600;
+        }
+
+     /* Chefs Section */
+     .chef-title {
+    font-size: 40px;
+    font-weight: 600;}
+
+    /* Formats Section */
+    .format-title {
+        font-size: 24px;
+        font-weight: 600;
+        }
+        .format-text{
+                font-size: 14px;
+                font-weight: 300;
+            }
+   /* Footer */
+        .adress-link {
+            color: var(--primary-light);
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 300;
+                }
+                
+        .adress-link:hover {
+            color: var(--color-brand-light);
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 300;}
+        .adress-copyright 
+{
+        font-size: 14px;
+    }
